--- a/index.css
+++ b/index.css
@@ -1,9 +1,3 @@
-*{
-    margin=0;
-    padding: 0;
-}
- 
- { margin: 50px }
 
 body{
     font-family: Arial, sans-serif;
@@ -72,18 +66,16 @@ small {
 a:link, a:visited {
     color: dodgerblue;
 }
-nav#header{
+.header{
     text-align:right;
     padding-top: 1px;
 }
-nav#header ul li{
+.header ul li{
     display:inline;    
 }
 
-nav#header ul li a:link, 
-nav#header ul li a:visited,
-footer nav ul li a:link,
-footer nav ul li a:visited{
+.header ul li a:link, visited,
+.clearfix  ul li a:link, visited{
     color: #555;
     text-decoration: none;
     padding:11px;
